// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdvumH sc-gsDKeI gPTZor dNJqeK"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdvumH sc-gsDKeI kunzPI dNJqeK"
>
  foo
</button>
`;
